# copier-vue-package-template

./: .copier-answers.yml  README.md  copier.yml  mutex_queue  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml  on-create-command.sh  post-start-command.sh
.github/: zizmor.yml
.github/reusable_workflows/: build-docker-image.yaml
.github/workflows/: ci.yaml  tag-on-merge.yaml
extensions/: context.py
template/: README.md.jinja
template/.devcontainer/: docker-compose.yml.jinja  install-ci-tooling.py.jinja
tests/copier_data/: data1.yaml  data2.yaml
