[project]
name = "copier-vue-package-template"
version = "0.1.0"
description = "Creating libraries in the VueJS ecosystem"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    # Specific to this template


    # Managed by upstream template
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
    "pyright[nodejs]>=1.1.407",
    "ty>=0.0.2",
    "copier==9.11.0",
    "copier-template-extensions==0.3.3"
]
